--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "snake-game",
   "version": "0.1.0",
+  "homepage": "https://github.com/shoaib-akhtar4/Snake-Game",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
